--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -119,7 +119,7 @@ p a:hover::after
 ::selection
 {
 	background: rgba(235,65,65,0.15);
-	color: #eb4141;
+	color: #8B0000;
 }
 p::selection
 {
@@ -238,7 +238,7 @@ section
 {
 	width: 157px;
 	height: 54px;
-	background: rgba(235,65,65,1);
+	background: rgba(139,0,0,1);
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
 	-ms-transition: all 200ms ease;
@@ -262,7 +262,7 @@ section
 	left: 0;
 	width: 100%;
 	height: 2px;
-	background: #ffd600;
+	background: #006400;
 	content: '';
 }
 .button:hover
@@ -331,7 +331,7 @@ section
 }
 .event_timer span
 {
-	color: #ffd600;
+	color: #006400;
 }
 .timer
 {
@@ -359,7 +359,7 @@ section
 {
 	width: 157px;
 	height: 57px;
-	background: #eb4141;
+	background: #8B0000;
 	text-align: center;
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
@@ -384,7 +384,7 @@ section
 }
 .donations_button:hover a
 {
-	color: #eb4141;
+	color: #8B0000;
 }
 
 /*********************************
@@ -451,11 +451,11 @@ section
 }
 .main_nav ul li a:hover
 {
-	color: #eb4141;
+	color: #8B0000;
 }
 .main_nav ul li.active a
 {
-	color: #eb4141;
+	color: #8B0000;
 }
 
 /*********************************
@@ -479,7 +479,7 @@ section
 }
 .search:hover .search_path
 {
-	fill: #eb4141;
+	fill: #8B0000;
 }
 .header_search_form
 {
@@ -493,7 +493,7 @@ section
 	bottom: 0px;
 	left: 0px;
 	width: 100%;
-	background: #eb4141;
+	background: #8B0000;
 	z-index: -1;
 	opacity: 0;
 	-webkit-transition: all 400ms ease;
@@ -554,7 +554,7 @@ section
 }
 .hamburger:hover i
 {
-	color: #eb4141;
+	color: #8B0000;
 }
 
 /*********************************
@@ -630,7 +630,7 @@ section
 }
 .menu_nav ul li a:hover
 {
-	color: #eb4141;
+	color: #8B0000;
 }
 .menu_close
 {
@@ -645,7 +645,7 @@ section
 }
 .menu_close:hover i
 {
-	color: #eb4141;
+	color: #8B0000;
 }
 
 /*********************************
@@ -697,7 +697,7 @@ section
 	width: 89px;
 	height: 89px;
 	border-radius: 50%;
-	background: #eb4141;
+	background: #8B0000;
 	margin: 0 auto;
 }
 .cross_1 img
@@ -725,7 +725,7 @@ section
 	width: 33px;
 	height: 33px;
 	border-radius: 50%;
-	background: rgba(235,65,65,1);
+	background: rgba(139,0,0,1);
 	z-index: 10;
 	cursor: pointer;
 	-webkit-transition: all 200ms ease;
@@ -736,7 +736,7 @@ section
 }
 .home_slider_nav:hover
 {
-	background: rgba(235,65,65,0.75);
+	background: rgba(139,0,0,0.75);
 }
 
 /*********************************
@@ -842,7 +842,7 @@ section
 	bottom: 0px;
 	width: 100%;
 	height: 1px;
-	background: #ffd600;
+	background: #006400;
 	content: '';
 	visibility: hidden;
 	opacity: 0;
@@ -854,7 +854,7 @@ section
 }
 .services_item:hover .services_title
 {
-	color: #eb4141;
+	color: #8B0000;
 }
 .services_item:hover .services_title::after
 {
@@ -923,7 +923,7 @@ section
 }
 .sermon_list li a
 {
-	color: #eb4141;
+	color: #8B0000;
 }
 .sermon_text
 {
@@ -972,7 +972,7 @@ section
 	height: calc(100% + 2px);
 	border-radius: 50%;
 	content: '';
-	border: solid 10px #eb4141;
+	border: solid 10px #8B0000;
 	visibility: hidden;
 	opacity: 0;
 	-webkit-transition: all 200ms ease;
@@ -1007,7 +1007,7 @@ section
 }
 .causes_item:hover .causes_item_title
 {
-	color: #eb4141;
+	color: #8B0000;
 }
 .causes_slider_nav
 {
@@ -1021,7 +1021,7 @@ section
 }
 .causes_slider_nav:hover
 {
-	background: #eb4141;
+	background: #8B0000;
 }
 .causes_slider_prev
 {
@@ -1108,7 +1108,7 @@ section
 	left: 0;
 	width: 94px;
 	height: 94px;
-	background: #eb4141;
+	background: #8B0000;
 }
 .news_day
 {
@@ -1141,7 +1141,7 @@ section
 .news_link a
 {
 	font-size: 14px;
-	color: #eb4141;
+	color: #8B0000;
 	font-style: italic;
 	font-weight: 500;
 }
@@ -1153,7 +1153,7 @@ section
 .newsletter
 {
 	width: 100%;
-	background: #eb4141;
+	background: #8B0000;
 }
 .newsletter_content
 {
@@ -1176,7 +1176,7 @@ section
 	border: none;
 	outline: none;
 	padding-left: 20px;
-	border-bottom: solid 2px #ffd600;
+	border-bottom: solid 2px #006400;
 }
 .newsletter_button
 {
@@ -1276,7 +1276,7 @@ section
 .footer_social ul li a i
 {
 	font-size: 17px;
-	color: #eb4141;
+	color: #8B0000;
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
 	-ms-transition: all 200ms ease;
@@ -1307,7 +1307,7 @@ section
 	bottom: 0;
 	width: 100%;
 	height: 2px;
-	background: #eb4141;
+	background: #8B0000;
 	content: '';
 }
 .footer_links ul
@@ -1334,7 +1334,7 @@ section
 }
 .footer_links ul li a:hover
 {
-	color: #eb4141;
+	color: #8B0000;
 }
 .footer_contact
 {
@@ -1360,7 +1360,7 @@ section
 .footer_contact ul li span
 {
 	font-weight: 500;
-	color: #eb4141;
+	color: #8B0000;
 }
 .footer_contact_phone span
 {
